--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -56,12 +56,17 @@ input::placeholder {
     color: $white;
     border: none;
     background-color: $dark_blue;
-    padding-left: 16px;
-    cursor: pointer;
+    padding-left: 8px 16px 8px 16px;
+    
+    >img {
+        height: 18px;
+        width: 18px;
+    }
 
     &:hover {
         background-color: $light_blue;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
       }
 }
 
@@ -305,7 +310,6 @@ h3 {
         text-align: center;
         align-content: center;
         margin-left: -8px;
-
     }
 }
 
