--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -184,9 +184,9 @@
   cursor: move;
   background: white;
   font-size: 14px;
-      &:hover {
-          cursor: pointer;
-      }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .task_card_category {
@@ -198,7 +198,7 @@
   background-color: $blue_deep; // dynamic color change by category needed!
   text-align: center;
   align-content: center;
-  color: $white; 
+  color: $white;
 }
 
 .task_card_main {
@@ -233,7 +233,6 @@
   height: 8px;
   border-radius: 4px;
   background-color: $blue_lavender;
-
 }
 
 .task_card_team {
@@ -244,40 +243,40 @@
 
 .team_left {
   @include dFlex($ai: center, $jc: space-between);
-  >.initials_icon1 {
-      @include font($fs: 12px, $fw: 400);
-      height: 32px;
-      width: 32px;
-      border-radius: 50%;
-      border: 2px solid $white;
-      background-color: $purple;
-      color: $white;
-      text-align: center;
-      align-content: center;
+  > .initials_icon1 {
+    @include font($fs: 12px, $fw: 400);
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    border: 2px solid $white;
+    background-color: $purple;
+    color: $white;
+    text-align: center;
+    align-content: center;
   }
-  >.initials_icon2 {
-      @include font($fs: 12px, $fw: 400);
-      height: 32px;
-      width: 32px;
-      border-radius: 50%;
-      border: 2px solid $white;
-      background-color: $pink_soft;
-      color: $white;
-      text-align: center;
-      align-content: center;
-      margin-left: -8px;
+  > .initials_icon2 {
+    @include font($fs: 12px, $fw: 400);
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    border: 2px solid $white;
+    background-color: $pink_soft;
+    color: $white;
+    text-align: center;
+    align-content: center;
+    margin-left: -8px;
   }
-  >.initials_icon3 {
-      @include font($fs: 12px, $fw: 400);
-      height: 32px;
-      width: 32px;
-      border-radius: 50%;
-      border: 2px solid $white;
-      background-color: $yellow_gold;
-      color: $white;
-      text-align: center;
-      align-content: center;
-      margin-left: -8px;
+  > .initials_icon3 {
+    @include font($fs: 12px, $fw: 400);
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    border: 2px solid $white;
+    background-color: $yellow_gold;
+    color: $white;
+    text-align: center;
+    align-content: center;
+    margin-left: -8px;
   }
 }
 
@@ -285,8 +284,7 @@
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-          0 8px 10px 1px rgba(0, 0, 0, 0.14),
-          0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
