--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -120,7 +120,7 @@
                 <input [(ngModel)]="task.text" [ngModelOptions]="{ standalone: true }" class="edit-input" />
                 <div class="actions">
                   <button class="btn-subtask" (click)="deleteSubtask($index)">
-                    <img class="close_subtask" src="./../../../../assets/img/icons/trash_icon.svg"
+                    <img class="close_subtask" src="assets/img/icons/trash_icon.svg"
                       alt="delete Image" /></button>
                   |
                   <button class="btn-subtask" (click)="saveEdit($index)">Ok</button>
@@ -130,10 +130,10 @@
 
                 <div class="actions">
                   <button class="btn-subtask" (click)="editSubtask($index)"><img class="close_subtask"
-                      src="./../../../../assets/img/icons/check_dark.svg" alt="check Image"></button>
+                      src="assets/img/icons/check_dark.svg" alt="check Image"></button>
                   |
                   <button class="btn-subtask" (click)="deleteSubtask($index)">
-                    <img class="close_subtask" src="./../../../../assets/img/icons/trash_icon.svg" alt="delete Image">
+                    <img class="close_subtask" src="assets/img/icons/trash_icon.svg" alt="delete Image">
                   </button>
                 </div>
                 }
