Added Subtasks scss for buttons

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -18,6 +18,7 @@ $yellow_bright: rgba(255, 230, 43, 1); // Bright Yellow 2
 $darker_orange: rgba(255, 122, 0, 1);
 $special_red: rgba(255, 61, 0, 1);
 $light_green: rgba(122, 226, 41, 1);
+$line_blue: rgba(0, 93, 255, 1);
 
 
 
