--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -21,19 +21,20 @@
         <button class="to_do_add_btn"></button>
       </div>
       <div class="empty_bg">
-        <div
-          class="tasks_content"
-          cdkDropList
-          #todoList="cdkDropList"
-          [cdkDropListData]="taskService.todoList"
-          [cdkDropListConnectedTo]="[progressList, feedbackList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          @for (task of taskService.todoList; track $index) {
-          <app-single-task [task]="task" cdkDrag></app-single-task>
-          }
-        </div>
+        <p>No task To do</p>
+      </div>
+      <div
+        class="tasks_content"
+        cdkDropList
+        #todoList="cdkDropList"
+        [cdkDropListData]="taskService.todoList"
+        [cdkDropListConnectedTo]="[progressList, feedbackList]"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        @for (task of taskService.todoList; track $index) {
+        <app-single-task [task]="task" cdkDrag></app-single-task>
+        }
       </div>
     </div>
     <div class="in_progress">
@@ -42,19 +43,20 @@
         <button class="in_progress_add_btn"></button>
       </div>
       <div class="empty_bg">
-        <div
-          class="tasks_content"
-          cdkDropList
-          #progressList="cdkDropList"
-          [cdkDropListData]="taskService.progressList"
-          [cdkDropListConnectedTo]="[todoList, feedbackList, doneList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          @for (task of taskService.progressList; track task) {
-          <app-single-task [task]="task" cdkDrag></app-single-task>
-          }
-        </div>
+        <p>No task in progress</p>
+      </div>
+      <div
+        class="tasks_content"
+        cdkDropList
+        #progressList="cdkDropList"
+        [cdkDropListData]="taskService.progressList"
+        [cdkDropListConnectedTo]="[todoList, feedbackList, doneList]"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        @for (task of taskService.progressList; track task) {
+        <app-single-task [task]="task" cdkDrag></app-single-task>
+        } 
       </div>
     </div>
     <div class="await_feedback">
@@ -63,19 +65,21 @@
         <button class="await_feedback_add_btn"></button>
       </div>
       <div class="empty_bg">
-        <div
-          class="tasks_content"
-          cdkDropList
-          #feedbackList="cdkDropList"
-          [cdkDropListData]="taskService.feedbackList"
-          [cdkDropListConnectedTo]="[todoList, progressList, doneList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          @for (task of taskService.feedbackList; track task) {
-          <app-single-task [task]="task" cdkDrag></app-single-task>
-          }
-        </div>
+        <p>No task awaits feedback</p>
+        
+      </div>
+      <div
+        class="tasks_content"
+        cdkDropList
+        #feedbackList="cdkDropList"
+        [cdkDropListData]="taskService.feedbackList"
+        [cdkDropListConnectedTo]="[todoList, progressList, doneList]"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        @for (task of taskService.feedbackList; track task) {
+        <app-single-task [task]="task" cdkDrag></app-single-task>
+        }
       </div>
     </div>
     <div class="done">
@@ -83,19 +87,20 @@
         <h2>Done</h2>
       </div>
       <div class="empty_bg">
-        <div
-          class="tasks_content"
-          cdkDropList
-          #doneList="cdkDropList"
-          [cdkDropListData]="taskService.doneList"
-          [cdkDropListConnectedTo]="[todoList, progressList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          @for (task of taskService.doneList; track task) {
-          <app-single-task [task]="task" cdkDrag></app-single-task>
-          }
-        </div>
+        <p>No task done yet</p>
+      </div>
+      <div
+        class="tasks_content"
+        cdkDropList
+        #doneList="cdkDropList"
+        [cdkDropListData]="taskService.doneList"
+        [cdkDropListConnectedTo]="[todoList, progressList]"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)"
+      >
+        @for (task of taskService.doneList; track task) {
+        <app-single-task [task]="task" cdkDrag></app-single-task>
+        }
       </div>
     </div>
   </div>
