--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -539,7 +539,14 @@ ul {
 
     .assigned_field {
       height: auto;
+      
+      .contact_list {
+        .assigned_field_contact_list {
+          position: relative;
+        }
+      }
     }
+
   }
 
   .line {
