--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -205,6 +205,7 @@ form {
     .contact_badge_line {
       position: relative;
       @include dFlex($jc: flex-start, $g: 5px);
+      flex-wrap: wrap;
       margin-top: 10px;
     }
   }
